# yolov8_deploy

./: README.md
include/: coco_labels.hpp  trt_calibrator.hpp  trt_classifier.hpp  trt_detector.hpp  trt_logger.hpp  trt_model.hpp  trt_preprocess.hpp  trt_timer.hpp  trt_worker.hpp  utils.hpp
src/: CMakeLists.txt
src/cpp/: main.cpp  trt_classifier.cpp  trt_detector.cpp  trt_logger.cpp  trt_model.cpp  trt_preprocess.cpp  trt_preprocess.cu  trt_timer.cpp  trt_worker.cpp  utils.cpp
src/python/: export_yolov8.py
